@@ -1,4 +1,4 @@
-# last modified 2016-04-01 by J. Fox
+# last modified 2016-07-12 by J. Fox
 
 importFrom(Hmisc, rcorr, print.rcorr)
 importFrom(MASS, stepAIC)
@@ -9,7 +9,7 @@ importFrom(sandwich, vcovHAC)
 importFrom(colorspace, rainbow_hcl)
 importFrom(readxl, read_excel, excel_sheets)
 importFrom(graphics, abline, arrows, axis, barplot, box, hist, legend, lines, 
-    matplot, mtext, par, plot, points, strheight, text)
+    matplot, mtext, par, plot, points, polygon, strheight, text)
 importFrom(grDevices, n2mfrow, palette)
 importFrom(stats, coef, complete.cases, cor, dist, formula, kmeans, 
     model.matrix, na.omit, p.adjust, pf, pt, qt, quantile, sd, update)
